--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "7.5.5",
     "@babel/register": "^7.6.0",
     "ava": "^2.4.0",
+    "jsdoc-to-markdown": "^5.0.1",
     "rimraf": "2.6.3"
   },
   "files": [
@@ -29,6 +30,7 @@
   "scripts": {
     "build": "babel src --out-dir lib",
     "clean": "rimraf lib",
+    "docs:build": "jsdoc2md --template readme.hbs --files src/*.js > readme.md",
     "prebuild": "npm run clean",
     "prepublish": "npm run build",
     "prewatch": "npm run clean",
