--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   ],
   "license": "MIT",
   "main": "index.js",
-  "name": "string-mutilator",
+  "name": "@0x04/string-mutilator",
   "repository": "git@github.com:0x04/string-mutilator",
   "scripts": {
     "build": "babel src --out-dir lib",
     "clean": "rimraf lib",
-    "docs:build": "jsdoc2md --template readme.hbs --files src/*.js > readme.md",
+    "docs:build": "jsdoc2md --template template-readme.hbs --files src/*.js > readme.md",
     "prebuild": "npm run clean",
     "prepublish": "npm run build",
     "prewatch": "npm run clean",
