--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@babel/register": "^7.9.0",
     "ava": "^2.4.0",
     "jsdoc-to-markdown": "^5.0.3",
-    "rimraf": "2.6.3"
+    "rimraf": "2.6.3",
+    "standard-version": "^7.1.0"
   },
   "files": [
     "index.js",
@@ -37,6 +38,7 @@
     "prebuild": "npm run clean",
     "prepublish": "npm run build",
     "prewatch": "npm run clean",
+    "release": "standard-version",
     "test": "ava --verbose",
     "watch": "babel src --out-dir lib --watch"
   },
